fixing portfolio image wrap

--- a/electric-jellyfish/src/styles/about.css
+++ b/electric-jellyfish/src/styles/about.css
@@ -21,7 +21,7 @@
   padding-top: 5%;
   flex-direction: column;
   align-items: center;
-  background-color: black;
+  background-color: #e0afa0;
 }
 
 .bio {
